# libmod_3d

./: .gitignore  CMakeLists.txt  EDITOR_PLAN.md  MESH_AND_TEXTURE_API.md  PHASE1_MATH.md  PHASE2_SHADERS.md  PHASE3_ASSETS.md  PHASE4_RENDERER.md  QUICKSTART.md  README.md  RUN_TEST.md  SESSION_2_SUMMARY.md  STATUS.md  USAGE_EXAMPLE.md  libmod_3d.c  libmod_3d.h  libmod_3d_anim.c  libmod_3d_anim.h  libmod_3d_bridge.c  libmod_3d_camera.c  libmod_3d_camera.h  libmod_3d_cave.c  libmod_3d_cave.h  libmod_3d_chunkterrain.c  libmod_3d_chunkterrain.h  libmod_3d_cloth.c  libmod_3d_cloth.h  libmod_3d_cloud_glsl.h  libmod_3d_collide.c  libmod_3d_collide.h  libmod_3d_entity.c  libmod_3d_entity.h  libmod_3d_exports.h  libmod_3d_fbx.c  libmod_3d_fbx.h  libmod_3d_fire.c  libmod_3d_fire.h  libmod_3d_flow.c  libmod_3d_flow.h  libmod_3d_fluidfill.c  (+53 more)
TEST/: PERF_BEACH.PRG  TEST_ANIM.PRG  TEST_BEACH.PRG  TEST_BENCH.PRG  TEST_CHARACTER.PRG  TEST_CLOTH.PRG  TEST_DAYNIGHT.PRG  TEST_DESTROY.PRG  TEST_DRIVE.PRG  TEST_EDITOR.PRG  TEST_EXAMPLE.PRG  TEST_FLASHLIGHT.PRG  TEST_FRACTURE.PRG  TEST_FSR.PRG  TEST_GLTF.PRG  TEST_MAP.PRG  TEST_MODEL.PRG  TEST_PHYSICS.PRG  TEST_PLAY.PRG  TEST_PLAYGROUND.PRG  TEST_PREFAB.PRG  TEST_SCENE.PRG  TEST_SHADOW.PRG  TEST_SIMPLE.PRG  TEST_SWIM.PRG  TEST_TERRAIN.PRG  TEST_TR.PRG  TEST_WALK.PRG  TEST_WATER.PRG  TEST_WATERFALL.PRG  TEST_WORLD.PRG  demo.scene  demo_beach.g3dh  demo_beach.scene  demo_height.g3dh  room.prefab  scene.scene
